# aiogram-bot-template-2

./: .env.dist  .gitignore  bot.py  pyproject.toml
tg_bot/: config.py
tg_bot/filters/: admin.py
tg_bot/handlers/: admin.py  echo.py
tg_bot/middlewares/: db.py
