[tool.poetry]
name = "aiogram-bot-template-tish"
version = "0.1.0"
description = ""
authors = ["FuryCydonian <ella.bir@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.18"
aioredis = "^2.0.1"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
